Обновлена форма регистрации на статическую UniSender

--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
   <section class="hero">
     <div class="container">
       <h1><!-- Ваш Call to Action здесь --></h1>
-      <div id="unisender-subscribe-form" data-url="https://cp.unisender.com/ru/v5/subscribe-form/view/685zuhab8c3sc9e7jt1u5i9rw5o5wgq81n5f1qsa" data-settings="6ef9oqo5n5kjod7iegwtqeuuaaswa3pkjeoyh7ij8hykkonfo45ry"></div>
+      <div id="static-form-container" data-url="https://cp.unisender.com/ru/v5/subscribe-form/view/6n7rszsjjq9kmezfyac5jexn4szday1eic86yr9y" data-settings="6wp63esy6s85ji7iegwtqeuuaaswa3pkjeoyh7ijxkpb1491xcjxo" style="display: none">
+        <form method="POST" action="https://cp.unisender.com/ru/subscribe?hash=63apa33i9iband7iegwtqeuuaawenujhknja1aaee3ifr6j4mesyy" name="subscribtion_form" us_mode="embed">
+          <!-- ... длинный HTML-код формы ... -->
+        </form>
+      </div>
       <script src="https://sf2df4j6wzf.s3.eu-central-1.amazonaws.com/popups/popup.js"></script>
       <script>
         window.popupForSubscriptionsForm("https://apig.unisender.com");
