--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <section class="hero">
     <div class="container">
       <h1><!-- Ваш Call to Action здесь --></h1>
-      <div id="static-form-container" data-url="https://cp.unisender.com/ru/v5/subscribe-form/view/6n7rszsjjq9kmezfyac5jexn4szday1eic86yr9y" data-settings="6wp63esy6s85ji7iegwtqeuuaaswa3pkjeoyh7ijxkpb1491xcjxo" style="display: none">
+      <div id="static-form-container" data-url="https://cp.unisender.com/ru/v5/subscribe-form/view/6n7rszsjjq9kmezfyac5jexn4szday1eic86yr9y" data-settings="6wp63esy6s85ji7iegwtqeuuaaswa3pkjeoyh7ijxkpb1491xcjxo">
         <form method="POST" action="https://cp.unisender.com/ru/subscribe?hash=63apa33i9iband7iegwtqeuuaawenujhknja1aaee3ifr6j4mesyy" name="subscribtion_form" us_mode="embed">
           <!-- ... длинный HTML-код формы ... -->
         </form>
