--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <body>
   <section class="hero">
       <form method="POST" action="https://cp.unisender.com/ru/subscribe?hash=63apa33i9iband7iegwtqeuuaawenujhknja1aaee3ifr6j4mesyy" name="subscribtion_form" us_mode="embed">
-        <div class="container responsive"><table cellpadding="0" cellspacing="0" align="center" style="width: 100%; box-sizing: border-box; background-color: rgb(204, 204, 204); float: left;"><tbody><tr><td>
+        <div class="container responsive"><table cellpadding="0" cellspacing="0" align="center" style="width: 100%; box-sizing: border-box;"><tbody><tr><td>
         <!--[if (gte mso 9)|(IE)]><table cellpadding="0" cellspacing="0" border="0" width="400" align="center"><tr><td><![endif]--><table cellpadding="0" cellspacing="0" align="center" style="background-color: rgb(255, 255, 255); border-radius: 0px; max-width: 450px; width: 100%; border: none; margin: 0px auto; border-spacing: 0px; border-collapse: collapse;"><tbody><tr><td width="100%" style="vertical-align: top; max-width: 450px; font-size: 0px; padding: 25px;">
         <!--[if (gte mso 9)|(IE)]><table cellpadding="0" cellspacing="0" border="0" width="400" align="center"><tr><td><![endif]-->                                    <table width="100%" border="0" cellspacing="0" cellpadding="0" style="width: 100%; table-layout: fixed; height: auto; border-collapse: collapse; border-spacing: 0px; display: inline-table; vertical-align: top; font-size: medium;">                <tbody>
         <tr>                    <td style="width: 100%; padding: 8px; height: 50px;" valign="top">                        <table border="0" cellspacing="0" cellpadding="0" style="height: 100%; width: 100%; table-layout: fixed; border-spacing: 0px; border-collapse: collapse; min-height: 50px;">                            <tbody>
@@ -128,12 +128,6 @@
         <input type="hidden" name="is_v5" value="1">
       </form>
     </section>
-
-  <div id="unisender-subscribe-form" data-url="https://cp.unisender.com/ru/v5/subscribe-form/view/6n7rszsjjq9kmezfyac5jexn4szday1eic86yr9y" data-settings="6wp63esy6s85ji7iegwtqeuuaaswa3pkjeoyh7ijxkpb1491xcjxo"></div>
-  <script src="https://sf2df4j6wzf.s3.eu-central-1.amazonaws.com/popups/popup.js"></script>
-  <script>
-    window.popupForSubscriptionsForm("https://apig.unisender.com");
-  </script>
 
   <!-- force update -->
 </body>
