Сделал фон формы UniSender прозрачным

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         width: 90%;
     }
 
+    /* Сделать фон формы UniSender прозрачным */
+    section.hero form[name="subscribtion_form"] table[style*="background-color: rgb(255, 255, 255)"] {
+        background-color: transparent !important;
+    }
+
     /* Стили для адаптации формы UniSender */
     #unisender-subscribe-form form table[style*="max-width"] {
         max-width: 100% !important; /* Убираем ограничение по ширине */
