--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         text-align: left !important;
         padding-bottom: 3px !important;
         font-size: 0.9rem !important; /* Чуть уменьшим шрифт лейбла */
-        color: #eee !important; /* Делаем текст светлее на тёмном фоне */
+        color: #ddd !important; /* Делаем текст светлее на тёмном фоне (изменено на #ddd) */
     }
     #unisender-subscribe-form form div[style*="display: inline-block"][style*="width: 66%"] {
         width: 100% !important; /* Инпуты на всю ширину */
