Увеличен z-index для формы UniSender до 999

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     /* Стили для формы UniSender */
     section.hero form[name="subscribtion_form"] {
         position: relative; /* Устанавливаем позиционирование */
-        z-index: 2;       /* Делаем слой выше, чем у ::before */
+        z-index: 999;       /* Делаем слой выше, чем у ::before (увеличено) */
         max-width: 400px; 
         width: 90%;
     }
