Исправлен CSS-селектор для z-index формы API

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
 
     /* Стили для формы UniSender */
-    section.hero form[name="subscribtion_form"] {
+    section.hero form#registration-form-api {
         position: relative;
         z-index: 2;
         max-width: 400px; 
